Spacing fixes

--- a/public/style/ai.css
+++ b/public/style/ai.css
@@ -57,9 +57,10 @@ h1 {
 }
 
 #top-content h3 {
-    margin-top: 2rem;
+    margin-top: 1.2rem;
     font-size: 1.25rem;
     font-weight: 300;
+    max-width: 625px;
 }   
 #top-content h3 span {
     font-size: 1rem;
@@ -146,6 +147,9 @@ h1 {
     left: 0;
     right: 0;
     padding: 20px;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: .875rem;
 }
 
 .textarea-wrapper {
@@ -194,19 +198,7 @@ button:hover {
     color: #F2EFEB;
 }
 
-@media (min-width: 768px) {
-    .input-container {
-        padding: 20px calc((100% - 1200px) / 2);
-    }
 
-    .textarea-wrapper {
-        padding: 0 2rem;
-    }
-
-    button {
-        right: 3rem;
-    }
-}
 
 /* Add these new styles */
 .spinner {
@@ -237,12 +229,12 @@ button:disabled {
     flex-direction: row;
     padding: 0 2rem;
     align-items: baseline;
+    justify-content: center;
 }
 .chip-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.25rem;
-    width: 100%;
+    gap: 0.5rem;
     align-items: center;
 }
 
@@ -251,10 +243,10 @@ button:disabled {
 } */
 
 .chip {
-    background-color: #dbf7db;
+    background-color: #F2EFEB;
     border: 1px solid #209320;
-    padding: .7rem 1rem;
-    border-radius: 100px;
+    padding: .5rem .875rem;
+    border-radius: .5rem;
     cursor: pointer;
     font-size: 0.875rem;
     text-align: center;
@@ -278,6 +270,44 @@ button:disabled {
     margin-bottom: 0.5rem;
     font-size: .875rem;
     color: #262421;
-    width: 165px;
+    width: 125px;
     display: block;
+}
+
+@media (min-width: 768px) {
+    .input-container {
+        padding: 20px calc((100% - 1200px) / 2);
+    }
+
+    .textarea-wrapper {
+        padding: 0 2rem;
+    }
+
+    button {
+        right: 3rem;
+    }
+}
+
+@media (max-width: 1075px) {
+    .chip:nth-child(6) {
+        display: none;
+    }
+}
+
+@media (max-width: 900px) {
+    .chip:nth-child(5) {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .chip:nth-child(4) {
+        display: none;
+    }
+}   
+
+@media (max-width: 600px) {
+    .prompts {
+        display: none;
+    }
 }
